--- a/app/package.json
+++ b/app/package.json
@@ -17,14 +17,25 @@
     "@types/react-dom": "^16.9.0",
     "@types/react-redux": "^7.1.7",
     "@types/react-router-dom": "^5.1.3",
+    "@types/uuid": "^7.0.0",
     "apollo-boost": "^0.4.7",
+    "apollo-cache-inmemory": "^1.6.5",
+    "apollo-client": "^2.6.8",
+    "apollo-link": "^1.2.13",
+    "apollo-link-error": "^1.1.12",
+    "apollo-link-http": "^1.5.16",
+    "apollo-link-state": "^0.4.2",
+    "apollo-link-ws": "^1.0.19",
     "graphql": "^14.6.0",
+    "graphql-tag": "^2.10.3",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
-    "typescript": "~3.7.2"
+    "subscriptions-transport-ws": "^0.9.16",
+    "typescript": "~3.7.2",
+    "uuid": "^7.0.2"
   },
   "scripts": {
     "start": "react-scripts start",
