--- a/app/package.json
+++ b/app/package.json
@@ -7,6 +7,7 @@
     "@apollo/react-hoc": "^3.1.3",
     "@apollo/react-hooks": "^3.1.3",
     "@material-ui/core": "^4.9.5",
+    "@material-ui/icons": "^4.9.1",
     "@reduxjs/toolkit": "^1.2.5",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
@@ -26,9 +27,12 @@
     "apollo-link-http": "^1.5.16",
     "apollo-link-state": "^0.4.2",
     "apollo-link-ws": "^1.0.19",
+    "clsx": "^1.1.0",
     "graphql": "^14.6.0",
     "graphql-tag": "^2.10.3",
     "react": "^16.13.0",
+    "react-dnd": "^10.0.2",
+    "react-dnd-html5-backend": "^10.0.2",
     "react-dom": "^16.13.0",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.1.2",
