--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,10 @@
 version: '3'
 services:
   postgres:
-    image: postgres
-    environment:
-      - POSTGRES_PASSWORD=postgres
-    volumes:
-        - ./server/schema.sql:/docker-entrypoint.initdb.d/1-schema.sql
+    build:
+      context: ./server
+      dockerfile: Dockerfile-database
   server:
-    build: ./server/
+    build: 
+      context: ./server
+      dockerfile: Dockerfile
