--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,3 +10,7 @@ services:
       dockerfile: Dockerfile
     depends_on:
       - postgres
+  app:
+    build:
+      content: ./app
+      dockerfile: Dockerfile
