--- a/app/package.json
+++ b/app/package.json
@@ -30,6 +30,7 @@
     "clsx": "^1.1.0",
     "graphql": "^14.6.0",
     "graphql-tag": "^2.10.3",
+    "notistack": "^0.9.9",
     "react": "^16.13.0",
     "react-dnd": "^10.0.2",
     "react-dnd-html5-backend": "^10.0.2",
