--- a/app/package.json
+++ b/app/package.json
@@ -38,6 +38,7 @@
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
+    "slugify": "^1.4.0",
     "subscriptions-transport-ws": "^0.9.16",
     "typescript": "~3.7.2",
     "uuid": "^7.0.2"
