--- a/app/nginx.conf
+++ b/app/nginx.conf
@@ -33,7 +33,7 @@ http {
         index index.html index.htm;
 
         location /graphql {
-            proxy_pass http://postgres:5000/graphql
+            proxy_pass http://postgres:5000/graphql;
         }
 
         location / {
