--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,7 +12,7 @@ services:
       - postgres
   app:
     build:
-      context: ./app
+      context: ./
       dockerfile: Dockerfile
     environment:
       - VIRTUAL_HOST=retr.dev
