--- a/nginx.conf
+++ b/nginx.conf
@@ -1,4 +1,4 @@
-# auto detects a good number of processes to run
+# autr detects a good number of processes to run
 worker_processes auto;
 
 #Provides the configuration file context in which the directives that affect connection processing are specified.
@@ -33,7 +33,7 @@ http {
         index index.html index.htm;
 
         location /graphql {
-            proxy_pass http://postgres:5000/graphql;
+            proxy_pass http://server:5000/graphql;
         }
 
         location / {
