--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,7 +14,7 @@ services:
     build:
       context: ./
       dockerfile: Dockerfile
-    ports:
+    expose:
       - "80"
     environment:
       - VIRTUAL_HOST=retr.dev
