--- a/nginx.conf
+++ b/nginx.conf
@@ -1,5 +1,10 @@
 events {}
 http {
+    map $http_upgrade $connection_upgrade {
+        default upgrade;
+        '' close;
+    }
+
     server {
         # listen on port 80
         listen 80;
@@ -11,6 +16,10 @@ http {
 
         location /graphql {
             proxy_pass http://server:5000/graphql;
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection "Upgrade";
+            proxy_set_header Host $host;
         }
 
         location / {
