--- a/app/package.json
+++ b/app/package.json
@@ -31,6 +31,7 @@
     "copy-to-clipboard": "^3.3.1",
     "graphql": "^14.6.0",
     "graphql-tag": "^2.10.3",
+    "http-proxy-middleware": "^1.0.1",
     "notistack": "^0.9.9",
     "react": "^16.13.0",
     "react-dnd": "^10.0.2",
@@ -71,6 +72,5 @@
     "@graphql-codegen/typescript": "^1.12.2",
     "@graphql-codegen/typescript-operations": "^1.12.2",
     "@graphql-codegen/typescript-react-apollo": "^1.12.2"
-  },
-  "proxy": "http://localhost:5000"
+  }
 }
